--- a/Client/index.html
+++ b/Client/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Banglore Home Price Prediction</title>
    
-	<link rel="stylesheet" href="app.css">
+	<link rel="stylesheet" href="./app.css">
 </head>
 <body>
 <div class="img"></div>
@@ -50,6 +50,6 @@
 	<div id="uiEstimatedPrice" class="result">	<h2></h2> </div>
 
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
